CSS update, a modern style ...

--- a/trunk/index.html
+++ b/trunk/index.html
@@ -2,23 +2,20 @@
 <head>
   <title>Public Names</title>
   <style type="text/css">
-  body > div {
-    margin: auto; width: 640px;
-    }
-  input {
-    font-family: 'Courier New'; 
-    font-size: 10pt;
-    }
-  .hidden {display: none;}
-  #footer {
-    color: grey;
-    font-size: small; 
-    text-align: center;
+  body {
+    font-family: 'Trebuchet MS', 'Lucida Grande', Verdana, Arial, Sans-Serif;
     }
   a {color: #3333FF;text-decoration: none;}
+  h1 a {color: #000000; text-decoration: none;}
+  h2 a {color: #000000; text-decoration: none;}
+  h3 a {color: #000000; text-decoration: none;}
   a:visited {color: #000099;}
   a:hover {color: #3333FF;}
   a:active {color: #6666FF;}
+  body > div {margin: auto; width: 640px;}
+  input textarea {font-family: 'Courier New'; font-size: 10pt;}
+  .hidden {display: none;}
+  #footer {color: grey; font-size: small; text-align: center;}
   </style>
 </head>
 
